# RoboticsProject

./: .gitignore  .gitingore  Doxyfile  README.md  base_controller_fixed.py  params.py  ur5_generic.py
FSM/: ConcreteFSMState.cpp  ConcreteFSMState.h  FSM.cpp  FSM.h
components/: controller_manager.py
computer_vision/: CMakeLists.txt  package.xml
computer_vision/data_generation/: clear.sh  data.yaml  draw_box.py  insert.sh  labels.cache  main_script.py  main_script_copy.py  main_script_multiblock.py  testkinematics.asv  testkinematics.m  valid.cache
computer_vision/data_generation/Blender/: BG_Scene.blend  BG_Scene.blend1  BG_Scene.fbx  BG_Scene_2.fbx  BG_Scene_3.fbx  BG_Scene_4.fbx  Scena.blend  Scena.blend1  Scena4.blend  Scena4.blend1
computer_vision/data_generation/Blender/Scena/: Scena.blend  Scena.blend1
computer_vision/data_generation/dataset/: macro_block.yaml
computer_vision/data_generation/dataset/runs/detect/train/: args.yaml
computer_vision/data_generation/dataset/runs/detect/train2/: args.yaml
computer_vision/data_generation/dataset/runs/detect/train3/: args.yaml
computer_vision/data_generation/dataset/runs/detect/train4/: args.yaml
computer_vision/data_generation/dataset/runs/detect/train5/: args.yaml
computer_vision/data_generation/dataset/runs/detect/train6/: args.yaml
computer_vision/data_generation/dataset/train/: labels.cache
computer_vision/data_generation/dataset/valid/: labels.cache
computer_vision/data_generation/roboflowset/: data.yaml
computer_vision/data_generation/roboflowset/runs/detect/train/: args.yaml
computer_vision/data_generation/roboflowset/runs/detect/train2/: args.yaml
computer_vision/data_generation/runs/detect/train/: args.yaml
computer_vision/data_generation/runs/detect/train10/: args.yaml
computer_vision/data_generation/runs/detect/train11/: args.yaml
computer_vision/data_generation/runs/detect/train12/: args.yaml
computer_vision/data_generation/runs/detect/train13/: args.yaml
computer_vision/data_generation/runs/detect/train14/: args.yaml
computer_vision/data_generation/runs/detect/train15/: args.yaml
computer_vision/data_generation/runs/detect/train16/: args.yaml
computer_vision/data_generation/runs/detect/train2/: args.yaml
computer_vision/data_generation/runs/detect/train3/: args.yaml
computer_vision/data_generation/runs/detect/train4/: args.yaml
computer_vision/data_generation/runs/detect/train5/: args.yaml
computer_vision/data_generation/runs/detect/train6/: args.yaml
computer_vision/data_generation/runs/detect/train7/: args.yaml
computer_vision/data_generation/runs/detect/train8/: args.yaml
computer_vision/data_generation/runs/detect/train9/: args.yaml
computer_vision/data_generation/scripts/: LastTryGen.py  draw_box.py  main_script.py  main_script_multiblock.py  safezone.py
computer_vision/data_generation/train/: labels.cache
computer_vision/data_generation/valid/: labels.cache
computer_vision/include/robotVision/: robotVision.h
computer_vision/launch/: robot_vision.launch
computer_vision/msg/: BoundingBox.msg  BoundingBoxes.msg  Instruction.msg  Points.msg
computer_vision/scripts/: detect.py
computer_vision/src/: yoloNode.cpp
computer_vision/srv/: GetInstructions.srv  GetPoints.srv
cpp/: CMakeLists.txt  package.xml
cpp/include/: ConcreteFSMState.h  FSM.h  FSMState.h  controller.h  eigenMatrices.h  kinematics.h  motion_trajectory.h
cpp/launch/: area.yaml  simple_block.launch  simulation.launch  simulation_assignment1.launch  simulation_assignment2.launch
cpp/src/: FSM.cpp  FSM_ass2.cpp  controller.cpp  controller_tests.cpp  node.cpp  test.cpp  test_all_poses.cpp  test_new_kinematics.cpp
cpp/src/FSM/: FSM.cpp  FSM_Main.cpp  FSM_ass2.cpp
cpp/src/kinematics/: direct.cpp  eigenMatrices.h  inverse.cpp  inverse_gpt.cpp  inverse_pinocchio.cpp  inverse_test_jac.cpp  jacobian.cpp  matrix_extractor.py  movement_checks.cpp  trajectory.cpp  ur5Trajectory.cpp  ur5jac.cpp
cpp/src/trajectories/: motion_plans.cpp  movement_checks.cpp  trajectory_init.cpp
documentation/html/: ConcreteFSMState_8h.html  ConcreteFSMState_8h__dep__incl.map  ConcreteFSMState_8h__dep__incl.md5  ConcreteFSMState_8h__incl.map  ConcreteFSMState_8h__incl.md5  ConcreteFSMState_8h_source.html  FSMState_8h.html  FSMState_8h__dep__incl.map  FSMState_8h__dep__incl.md5  FSMState_8h__incl.map  FSMState_8h__incl.md5  FSMState_8h_source.html  FSM_8cpp.html  FSM_8cpp__incl.map  FSM_8cpp__incl.md5  FSM_8h.html  FSM_8h__dep__incl.map  FSM_8h__dep__incl.md5  FSM_8h__incl.map  FSM_8h__incl.md5  FSM_8h_source.html  FSM__Main_8cpp.html  FSM__Main_8cpp__incl.map  FSM__Main_8cpp__incl.md5  LastTryGen_8py.html  README_8md.html  admittance__controller_8py.html  annotated.html  base__controller__fixed_8py.html  classController-members.html  classController.html  classFSM-members.html  classFSM.html  classFSMState-members.html  classFSMState.html  classFSMState__inherit__graph.map  classFSMState__inherit__graph.md5  classInit-members.html  classInit.html  classInit__inherit__graph.map  (+458 more)
documentation/latex/: ConcreteFSMState_8h.tex  ConcreteFSMState_8h__dep__incl.md5  ConcreteFSMState_8h__incl.md5  FSMState_8h.tex  FSMState_8h__dep__incl.md5  FSMState_8h__incl.md5  FSM_8cpp.tex  FSM_8cpp__incl.md5  FSM_8h.tex  FSM_8h__dep__incl.md5  FSM_8h__incl.md5  FSM__Main_8cpp.tex  FSM__Main_8cpp__incl.md5  LastTryGen_8py.tex  admittance__controller_8py.tex  annotated.tex  base__controller__fixed_8py.tex  classController.tex  classFSM.tex  classFSMState.tex  classFSMState__inherit__graph.md5  classInit.tex  classInit__coll__graph.md5  classLastTryGen_1_1Render.tex  classMove.tex  classMove__inherit__graph.md5  classPickUp.tex  classPickUp__coll__graph.md5  classPlaceDown.tex  classPlaceDown__coll__graph.md5  classSearch.tex  classSearch__inherit__graph.md5  classWait.tex  classWait__inherit__graph.md5  classadmittance__controller_1_1AdmittanceControl.tex  classbase__controller__fixed_1_1BaseControllerFixed.tex  classdetect_1_1Detector.tex  (+169 more)
models/: simple_block.sdf
utils/: common_functions.py  math_tools.py
(+167 files in other folders)
