<?xml version="1.0"?>
<package format="2">
  <name>robot_project</name>
  <version>0.0.0</version>
  <description>publisher for ur5 in cpp</description>

  <maintainer email="emanuele.ricca@studenti.unitn.it">emanuelericca</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>computer_vision</depend>
</package>
